[package]
name = "rumbex_smb_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "rumbex_smb_native"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
once_cell = "1"
smb = { version = "0.8.2", default-features = false, features = [
  "multi_threaded",
  "sign", "sign_hmac", "sign_cmac", "sign_gmac"
] }
